<resources>
    <string name="app_name">Lib-Rate</string>
    <string name="log_in">Log In</string>
    <string name="Email">Enter Email</string>
    <string name="Password">Enter Password</string>
    <string name="NoAcc">No account?</string>
    <string name="Create">Create One</string>
    <string name="WebCliID">380515044827-v0khv5592ufbc95mfanpgs46kn6k500h.apps.googleusercontent.com</string>
    <string name="nav_home">Home</string>
    <string name="nav_voucher">My Vouchers</string>
    <string name="nav_Interact">Interact</string>
    <string name="nav_Statement">Statement</string>
    <string name="nav_Locate">Locate</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_contact">About me</string>
    <string name="RegisterButton">New Here?REGISTER</string>
    <string name="orText"> OR </string>
    <string name="Conf_pass">Confirm Password</string>
    <string name="Sign_up">Register</string>
    <string name="Already_have_acc">Already have an Account? Sign In</string>
    <string name="Error_pass">Pass</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="log_out">Log Out</string>
    <string name="request_fragment">Request_Fragment</string>
    <string name="sell_fragment">Sell_Fragment</string>
    <string name="sell">Sell</string>
    <string name="sell_books">Buy Books</string>
    <string name="request_books">Request Books</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="add_item">Add Item</string>
    <string name="name_of_the_book">Name of the Book</string>
    <string name="description">Description</string>
    <string name="price_of_the_book">Price of the book</string>
    <string name="important_notes">Important Description</string>
    <string name="for_which_semester">For Which Semester?</string>
    <string name="username">Username</string>
    <string name="department">Department</string>
    <string name="anonymous">Anonymous</string>
    <string-array name="SpinnerDeptItems">
        <item>CSE</item>
        <item>EE</item>
        <item>ECE</item>
        <item>CE</item>
        <item>ME</item>
        <item>IT</item>
        <item>Others</item>
    </string-array>
    <string name="RandomTestText">if you apply it on the left text view you can use the bottom solution of mine and simply change android:left="1dp" to read android:right="1dp" so you set a right border.
        that should be sufficient and it wont be necessary to put it on both textviews.
        its good to know this though as you will find many situations where you need borders around views or even have to create your own buttons! </string>
    <string name="add_to_favourite">Add Favourite</string>
    <string name="contact_seller">Contact Seller</string>
    <string name="default_notification_channel_id">myChannelId</string>
    <string name="update_name">Update Name</string>
    <string name="Update">Update</string>


</resources>
