<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="520dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="380dp"
                    android:src="@color/colorAccent"
                    android:id="@+id/DetailedPostImage"/>

                <TextView
                    android:id="@+id/DetailedBookName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="25dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/name_of_the_book"
                    android:textColor="@color/TextColorBlack"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/DetailedBookPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="25dp"
                    android:drawableStart="@drawable/ic_rupee_indian_"
                    android:drawablePadding="3dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/price_of_the_book"
                    android:textColor="@color/TextColorBlack"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="25dp"
                    android:drawablePadding="3dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="This Book Is For"
                    android:textColor="@color/TextColorBlack"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="10dp"
                    android:background="#cfcfcf" />

                <TextView
                    android:id="@+id/DetailedDept_Semester"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="20dp"
                    android:drawablePadding="3dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="CSE 2nd Semester"
                    android:textColor="@color/TextColorBlack"
                    android:textSize="18sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="25dp"
                    android:drawablePadding="3dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/description"
                    android:textColor="@color/TextColorBlack"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="10dp"
                    android:background="#cfcfcf" />

                <TextView
                    android:id="@+id/DetailedPostDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/RandomTestText"
                    android:textColor="@color/TextColorBlack"
                    android:textSize="16sp"
                    android:textStyle="normal" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="6dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/DetailedFavouriteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/add_to_favourite"
                    android:textAlignment="gravity"
                    android:textColor="@color/TextColorBlack"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/view"
                    app:layout_constraintStart_toStartOf="parent" />

                <View
                    android:id="@+id/view"
                    android:layout_width="2dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="8dp"

                    android:background="#cfcfcf"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/DetailedContactButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/contact_seller"
                    android:textAlignment="gravity"
                    android:textColor="@color/TextColorBlack"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/view" />
            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>


</android.support.v4.widget.NestedScrollView>