<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    android:paddingTop="10dp"
    app:cardCornerRadius="3dp"
    android:layout_marginTop="5dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/MySellItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="5dp"
            android:maxWidth="220dp"
            android:maxLines="2"

            android:text="@string/appbar_scrolling_view_behavior"
            android:textColor="@color/TextColorBlack"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/MySellItemDeptnSem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:drawablePadding="2dp"
            android:fontFamily="sans-serif-condensed"
            android:maxWidth="105dp"
            android:maxLines="1"
            android:text="@string/anonymous"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MySellItemName" />

        <TextView
            android:id="@+id/MySellItemPriceTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_rupee_indian_"
            android:drawablePadding="1dp"
            android:fontFamily="sans-serif-condensed"
            android:maxWidth="140dp"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textColor="@color/TextColorBlack"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MySellItemDeptnSem" />

        <ImageView
            android:id="@+id/MySellItemImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.996"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="#cfcfcf"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MySellItemImage" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/description"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3"
            app:layout_constraintVertical_bias="0.007" />

        <TextView
            android:id="@+id/MySellItemDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="20dp"
            android:text="@string/RandomTestText"
            android:textColor="@color/TextColorBlack"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="#cfcfcf"
            app:layout_constraintTop_toBottomOf="@+id/MySellItemDesc"
             />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/MySellItemDeleteButton"
            style="@style/Cust"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/ic_delete_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view4"
            app:layout_constraintVertical_bias="1.0"
            app:layout_editor_absoluteY="310dp" />

    </android.support.constraint.ConstraintLayout>



</android.support.v7.widget.CardView>